--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 ## Root
 group=com.deliveryhero.alfred
 artifact=versiontest
-version=0.0.1-SNAPSHOT
+version=0.0.1
 
 # Kotlin
 kotlin.version=1.3.50
