Releasing 0.0.3. Previous version was 0.0.3-SNAPSHOT.

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 ## Root
 group=com.deliveryhero.alfred
 artifact=versiontest
-version=0.0.3-SNAPSHOT
+version=0.0.3
 
 # Kotlin
 kotlin.version=1.3.50
